# kdp-agent

./: .gitignore  AGENTS.md  QUICKSTART.md  kdp-config.yaml  pyproject.toml
.cursor/rules/: kdp-coding-standards.mdc
kdp_agent/: __init__.py  __main__.py  config.py  db.py  schema.surql
kdp_agent/agents/content/: __init__.py  image_gen.py  ip_check.py  pdf_builder.py  postprocess.py  prompt_templates.py
kdp_agent/agents/cover/: __init__.py  cover_gen.py  cover_pdf.py
kdp_agent/agents/marketing/: __init__.py
kdp_agent/agents/metadata/: __init__.py  metadata_gen.py  validator.py
kdp_agent/agents/monitor/: __init__.py
kdp_agent/agents/niche/: __init__.py
kdp_agent/agents/publisher/: __init__.py  session.py
kdp_agent/agents/series/: __init__.py  dedup.py  series_repo.py  style_dna.py
kdp_agent/commands/: cover.py  dashboard.py  generate.py  marketing.py  metadata.py  monitor.py  publish.py  research.py  series.py  setup.py
kdp_agent/dashboard/: app.py
kdp_agent/dashboard/templates/: health.html  index.html  preflight.html  review.html  series.html
kdp_agent/migrations/: 001_add_series.surql
openspec/: .session.md  design-brief.md  research.md  review-summary.md  tasks.md
openspec/.opsx/: tdd-state.json
openspec/specs/kdp-content-agent/: spec.md
openspec/specs/kdp-pipeline-core/: spec.md
openspec/specs/kdp-publisher-agent/: spec.md
openspec/specs/kdp-series-tracking/: spec.md
scripts/: mark_tasks.py
tests/: test_series_tracking.py
