[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kdp-agent"
version = "0.1.0"
description = "Semi-auto AI agent system for Amazon KDP coloring book publishing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "surrealdb>=1.0.0",
    "ollama>=0.2.0",
    "replicate>=0.25.0",
    "pillow>=10.0",
    "reportlab>=4.0",
    "rembg>=2.0.50",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "rich>=13.0",
    "aiofiles>=23.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-image>=0.22",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44.0"]
clip = ["torch>=2.0", "transformers>=4.40.0", "open-clip-torch>=2.24.0"]
video = ["ffmpeg-python>=0.2.0"]
tts = ["kokoro-onnx>=0.3.0"]
all = [
    "playwright>=1.44.0",
    "torch>=2.0",
    "transformers>=4.40.0",
    "open-clip-torch>=2.24.0",
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
kdp-agent = "kdp_agent.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["kdp_agent"]
